--- a/styles/components/_verifiedMod.scss
+++ b/styles/components/_verifiedMod.scss
@@ -32,7 +32,6 @@
         font-size: $tx5;
         text-align: left;
         padding: $padMd $padLg;
-        width: 220px;
 
         &:before {
           background: $alert2Background;
